# rust-blog

./: .env  Cargo.toml  README.md  my_db.db3
doc/: open-api.yaml  swagger.yaml
migrations/2020-05-22-053024_create_comments/: up.sql
migrations/2020-06-18-063306_tags/: down.sql  up.sql
migrations/2020-07-13-060924_post-created-at-subtitle/: down.sql  up.sql
react-ui/: package-lock.json  package.json
react-ui/src/: App.css  App.js  PostList.js  Route.js  UserList.js  index.js
react-ui/src/client/: BaseClient.js  BaseClient.ts  LoginClient.js  PostClient.js  PostClient.ts  TagClient.js  UserClient.js  UserClient.ts
react-ui/src/component/: Bootstrap.js  Home.js  Login.js  PostAdd.tsx  PostList.js  Route.js  TagList.js  UserAdd.tsx  UserList.js  UserUtils.ts
react-ui/src/redux/: actions.ts  reducers.ts  store.ts
rust/: Cargo.toml  my_db.db3
rust/migrations/2020-05-22-052249_create_posts/: up.sql
rust/migrations/2020-05-22-052923_create_users/: up.sql
rust/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  security.rs
rust/src/repository/: tag.rs  user.rs
src/: lib.rs  main.rs  models.rs  schema.rs  serialization.rs
src/repository/: comment.rs  mod.rs  post.rs  tag.rs  user.rs
